# IzumiBot

./: .env  .gitignore  README.md  bot.py  pyproject.toml
IzumiBot/plugins/bot_utils/: __init__.py  controllers.py  converter.py  extractors.py
IzumiBot/plugins/message_template/: __init__.py  base.py  exceptions.py  syntax.py  utils.py
IzumiBot/plugins/tracemoe_search/: __init__.py  models.py
