[tool.poetry]
name = "IzumiBot"
version = "0.1.0"
description = "A new generation of Python QQ bot, based on the OneBot ecosystem."
authors = ["Mix <32300164+mnixry@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
nonebot-adapter-cqhttp = "~2.0.0-alpha.13"
nonebot2 = "~2.0.0-alpha.13"
loguru = "^0.5.3"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[nonebot.plugins]
plugins = []
plugin_dirs = ["IzumiBot/plugins"]